--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.5 N-Gram 索引.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.3 表索引/3.3.5 N-Gram 索引.md
@@ -40,7 +40,7 @@
 
     * `bf_size` ： `BloomFilter` 的大小，单位是 `Bit` 。 `bf_size` 决定每个数据块对应的索引大小，这个值越大占用存储空间越大，同时 `Hash` 碰撞的概率也越低。
 
-    * `gram_size` 建议取 `LIKE` 查询的字符串最小长度，但是不建议低于 `2` 。一般建议设置 `"gram_size"="3"` , `"bf_size"="1024"` ，然后根据 `Query Profile` 调优。
+    * `gram_size` 建议取 `LIKE` 查询的字符串最小长度，但是不建议低于 `2` 。一般建议设置 `"gram_size"="3"` ， `"bf_size"="1024"` ，然后根据 `Query Profile` 调优。
 
 4. `COMMENT` 是可选的，用于指定索引注释
 
