--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.4 Tiered Storage/3.4.1 SSD 和 HDD 层级存储.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.4 Tiered Storage/3.4.1 SSD 和 HDD 层级存储.md
@@ -2,7 +2,7 @@
 
 可以配置动态分区参数，在不同的磁盘类型上创建动态分区， `Doris` 会根据配置参数将冷数据从 `SSD` 迁移到 `HDD` 。这样的做法在降低成本的同时，也提升了 `Doris` 的读写性能。
 
-动态分区参数可以参考数据划分-动态分区
+动态分区参数可以参考数据划分的动态分区
 
 `dynamic_partition.hot_partition_num` 指定最新的多少个分区为热分区。对于热分区，系统会自动设置其 `storage_medium` 参数为 `SSD` ，并且设置 `storage_cooldown_time` 。
 
