--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.4 Tiered Storage/3.4.2 远程存储.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.4 Tiered Storage/3.4.2 远程存储.md
@@ -103,7 +103,7 @@ CREATE RESOURCE "remote_hdfs" PROPERTIES (
 
 除了新建表支持设置远程存储外， `Doris` 还支持对一个已存在的表或者 `PARTITION` ，设置远程存储。
 
-对一个已存在的表，设置远程存储，将创建好的 `STORAGE POLICY`与表关联：
+对一个已存在的表，设置远程存储，将创建好的 `STORAGE POLICY` 与表关联：
 
 ```sql
 ALTER TABLE create_table_not_have_policy set ("storage_policy" = "test_policy");
@@ -117,7 +117,7 @@ ALTER TABLE create_table_partition MODIFY PARTITION (*) SET("storage_policy"="te
 
 !!! tip
 
-    注意，如果用户在建表时给整张 `Table` 和部分 `Partition` 指定了不同的 `Storage Policy` ， `Partition` 设置的 `Storage policy` 会被无视，整张表的所有 `Partition` 都会使用 `table` 的 `Policy` . 如果您需要让某个 `Partition` 的 `Policy` 和别的不同，则可以使用上文中对一个已存在的 `Partition` ，关联 `Storage policy` 的方式修改。
+    注意，如果用户在建表时给整张 `Table` 和部分 `Partition` 指定了不同的 `Storage Policy` ， `Partition` 设置的 `Storage policy` 会被无视，整张表的所有 `Partition` 都会使用 `table` 的 `Policy` 。如果您需要让某个 `Partition` 的 `Policy` 和别的不同，则可以使用上文中对一个已存在的 `Partition` ，关联 `Storage policy` 的方式修改。
 
     具体可以参考 `Docs` 目录下 `RESOURCE` 、 `POLICY` 、 `CREATE TABLE` 、 `ALTER TABLE` 等文档，里面有详细介绍。
 
@@ -173,7 +173,7 @@ ALTER TABLE create_table_partition MODIFY PARTITION (*) SET("storage_policy"="te
 
 1. 上传 `rowset` 失败但是有部分 `segment` 上传成功。
 
-2. `FE` 重新选 `CooldownReplica` 后，新旧 `CooldownReplica` 的 `rowset version` `不一致，FollowerReplica` 都去同步新 `CooldownReplica` 的 `CooldownMeta` ，旧 `CooldownReplica` 中 `version` 不一致的 `rowset` 没有 `Replica` 使用成为垃圾数据。
+2. `FE` 重新选 `CooldownReplica` 后，新旧 `CooldownReplica` 的 `rowset version` 不一致， `FollowerReplica` 都去同步新 `CooldownReplica` 的 `CooldownMeta` ，旧 `CooldownReplica` 中 `version` 不一致的 `rowset` 没有 `Replica` 使用成为垃圾数据。
 
 3. 远程存储数据 `Compaction` 后，合并前的 `rowset` 因为还可能被其他 `Replica` 使用不能立即删除，但是最终 `FollowerReplica` 都使用了最新的合并后的 `rowset` ，合并前的 `rowset` 成为垃圾数据。
 
@@ -185,7 +185,7 @@ ALTER TABLE create_table_partition MODIFY PARTITION (*) SET("storage_policy"="te
 ERROR 1105 (HY000): errCode = 2, detailMessage = Failed to create repository: connect to s3 failed: Unable to marshall request to JSON: host must not be null.
 ```
 
-`S3 SDK` 默认使用 `virtual-hosted style` 方式。但某些对象存储系统 (如： `minio` ) 可能没开启或没支持 `virtual-hosted style` 方式的访问，此时我们可以添加 `use_path_style` 参数来强制使用 `path style` 方式：
+`S3 SDK` 默认使用 `virtual-hosted style` 方式。但某些对象存储系统（如： `minio` ）可能没开启或没支持 `virtual-hosted style` 方式的访问，此时我们可以添加 `use_path_style` 参数来强制使用 `path style` 方式：
 
 ```sql
 CREATE RESOURCE "remote_s3"
