--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.5 使用注意.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.5 数据模型/3.5.5 使用注意.md
@@ -96,9 +96,9 @@ SELECT COUNT(*) FROM table;
 | 10002 | 2017/11/21 | 39 |
 | 10003 | 2017/11/22 | 22 |
 
-所以，`select count(*) from table;` 的正确结果应该为 `4` 。但如果只扫描 `user_id` 这一列，如果加上查询时聚合，最终得到的结果是 `3（10001, 10002, 10003）` 。而如果不加查询时聚合，则得到的结果是 `5` （两批次一共 `5` 行数据）。可见这两个结果都是不对的。
+所以， `select count(*) from table;` 的正确结果应该为 `4` 。但如果只扫描 `user_id` 这一列，如果加上查询时聚合，最终得到的结果是 `3(10001,10002,10003)` 。而如果不加查询时聚合，则得到的结果是 `5` （两批次一共 `5` 行数据）。可见这两个结果都是不对的。
 
-为了得到正确的结果，必须同时读取 `user_id` 和 `date` 这两列的数据，再加上查询时聚合，才能返回 `4` 这个正确的结果。也就是说，在 `count(*)` 查询中， `Doris` 必须扫描所有的 `AGGREGATE KEY` 列（这里就是 `user_id` `date` ），并且聚合后，才能得到语意正确的结果。 当聚合列非常多时， `count(*)` 查询需要扫描大量的数据。
+为了得到正确的结果，必须同时读取 `user_id` 和 `date` 这两列的数据，再加上查询时聚合，才能返回 `4` 这个正确的结果。也就是说，在 `count(*)` 查询中， `Doris` 必须扫描所有的 `AGGREGATE KEY` 列（这里就是 `user_id` `date` ），并且聚合后，才能得到语意正确的结果。当聚合列非常多时， `count(*)` 查询需要扫描大量的数据。
 
 因此，当业务上有频繁的 `count(*)` 查询时，建议用户通过增加一个值恒为 `1` 的，聚合类型为 `SUM` 的列来模拟 `count(*)` 。如刚才的例子中的表结构，我们修改如下：
 
@@ -109,7 +109,7 @@ SELECT COUNT(*) FROM table;
 | cost | BIGINT | SUM | 用户总消费 |
 | count | BIGINT | SUM | 用于计算 count |
 
-增加一个 `count` 列，并且导入数据中，该列值恒为 `1` 。则 `select count(*) from table;` 的结果等价于 `select sum(count) from table;` 。而后者的查询效率将远高于前者。不过这种方式也有使用限制，就是用户需要自行保证，不会重复导入 `AGGREGATE KEY` 列都相同地行。否则，`select sum(count) from table;` 只能表述原始导入的行数，而不是 `select count(*) from table;` 的语义。
+增加一个 `count` 列，并且导入数据中，该列值恒为 `1` 。则 `select count(*) from table;` 的结果等价于 `select sum(count) from table;` 。而后者的查询效率将远高于前者。不过这种方式也有使用限制，就是用户需要自行保证，不会重复导入 `AGGREGATE KEY` 列都相同地行。否则， `select sum(count) from table;` 只能表述原始导入的行数，而不是 `select count(*) from table;` 的语义。
 
 另一种方式，就是将如上的 `count` 列的聚合类型改为 `REPLACE` ，且依然值恒为 `1` 。那么 `select sum(count) from table;` 和 `select count(*) from table;` 的结果将是一致的。并且这种方式，没有导入重复行的限制。
 
@@ -151,7 +151,7 @@ SELECT COUNT(*) FROM table;
 
 ## 5 Key 列的不同意义
 
-`Duplicate` 、 `Aggregate` 、 `Unique` 模型，都会在建表指定 `Key` 列，然而实际上是有所区别的：对于 `Duplicate` 模型，表的 `Key` 列，可以认为只是 "排序列"，并非起到唯一标识的作用。而 `Aggregate` 、 `Unique` `模型这种聚合类型的表，Key` 列是兼顾 "排序列" 和 "唯一标识列"，是真正意义上的 " `Key` 列"。
+`Duplicate` 、 `Aggregate` 、 `Unique` 模型，都会在建表指定 `Key` 列，然而实际上是有所区别的：对于 `Duplicate` 模型，表的 `Key` 列，可以认为只是“排序列”，并非起到唯一标识的作用。而 `Aggregate` 、 `Unique` 模型这种聚合类型的表， `Key` 列是兼顾“排序列”和“唯一标识列”，是真正意义上的“ `Key` 列”。
 
 ## 6 模型选择建议
 
