--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.6 行列混存.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.6 行列混存.md
@@ -20,7 +20,7 @@
     "row_store_columns" = "column1,column2,column3"
     ```
 
-3. 行存 page_size：默认为 16KB。
+3. 行存 `page_size` ：默认为 `16KB` 。
 
     ```sql
     "row_store_page_size" = "16384"
