--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.2 手动分区.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.2 手动分区.md
@@ -16,7 +16,7 @@
 
 ## 2 Range 分区
 
-分区列通常为时间列，以方便的管理新旧数据。 `Range` 分区支持的列类型 `DATE` , `DATETIME` , `TINYINT` , `SMALLINT` , `INT` , `BIGINT` , `LARGEINT` 。
+分区列通常为时间列，以方便的管理新旧数据。 `Range` 分区支持的列类型 `DATE` ， `DATETIME` ， `TINYINT` ， `SMALLINT` ， `INT` ， `BIGINT` ， `LARGEINT` 。
 
 分区信息，支持四种写法：
 
@@ -163,7 +163,7 @@ PARTITION BY LIST(id, city)
     1 row in set (0.18 sec)
     ```
 
-2. `RANGE` 分区 —— 归属最小的 `LESS THAN` 分区
+2. `RANGE` 分区，归属最小的 `LESS THAN` 分区
 
     ```sql
     mysql> create table null_range(
@@ -191,7 +191,7 @@ PARTITION BY LIST(id, city)
     1 row in set (0.18 sec)
     ```
 
-3. `RANGE` 分区 —— 没有 `LESS THAN` 分区时，无法插入
+3. `RANGE` 分区，没有 `LESS THAN` 分区时，无法插入
 
     ```sql
     mysql> create table null_range2(
