--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.4 自动分区.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.4 自动分区.md
@@ -53,7 +53,7 @@ PROPERTIES (
 
 建表时，使用以下语法填充 `CREATE-TABLE` 时的 `partition_info` 部分：
 
-1. `AUTO RANGE PARTITION` :
+1. `AUTO RANGE PARTITION` ：
 
     ```sql
     AUTO PARTITION BY RANGE (FUNC_CALL_EXPR)
@@ -67,9 +67,9 @@ PROPERTIES (
     FUNC_CALL_EXPR ::= date_trunc ( <partition_column>, '<interval>' )
     ```
 
-    注意：在 `2.1.0` 版本，`FUNC_CALL_EXPR` 外围不需要被括号包围。
+    注意：在 `2.1.0` 版本， `FUNC_CALL_EXPR` 外围不需要被括号包围。
 
-2. `AUTO LIST PARTITION` :
+2. `AUTO LIST PARTITION` ：
 
     ```sql
     AUTO PARTITION BY LIST(`partition_col`)
@@ -113,11 +113,11 @@ PROPERTIES (
 
 ### 2.2 约束
 
-1. 在 `AUTO LIST PARTITION` 中，分区名长度不得超过 `50` . 该长度来自于对应数据行上各分区列内容的拼接与转义，因此实际容许长度可能更短。
+1. 在 `AUTO LIST PARTITION` 中，分区名长度不得超过 `50` 。该长度来自于对应数据行上各分区列内容的拼接与转义，因此实际容许长度可能更短。
 
 2. 在 `AUTO RANGE PARTITION` 中，分区函数仅支持 `date_trunc` ，分区列仅支持 `DATE` 或者 `DATETIME` 类型；
 
-3. 在 `AUTO LIST PARTITION` 中，不支持函数调用，分区列支持 `BOOLEAN`, `TINYINT`, `SMALLINT`, `INT`, `BIGINT`, `LARGEINT`, `DATE`, `DATETIME`, `CHAR`, `VARCHAR` 数据类型，分区值为枚举值。
+3. 在 `AUTO LIST PARTITION` 中，不支持函数调用，分区列支持 `BOOLEAN` ， `TINYINT` ， `SMALLINT` ， `INT` ， `BIGINT` ， `LARGEINT` ， `DATE` ， `DATETIME` ， `CHAR` ， `VARCHAR` 数据类型，分区值为枚举值。
 
 4. 在 `AUTO LIST PARTITION` 中，分区列的每个当前不存在对应分区的取值，都会创建一个独立的新 `PARTITION` 。
 
