--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.6 自动分桶.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.6 自动分桶.md
@@ -55,7 +55,7 @@ properties("estimate_partition_size" = "2G")
     否则最终分桶数为 x
     ```
 
-4. `x = max(x, autobucket_min_buckets)` , 这里 `autobucket_min_buckets` 是在 `Config` 中配置的，默认是 `1`
+4. `x = max(x, autobucket_min_buckets)` ，这里 `autobucket_min_buckets` 是在 `Config` 中配置的，默认是 `1`
 
     上述过程伪代码表现形式为：
 
@@ -157,4 +157,4 @@ properties("estimate_partition_size" = "2G")
 
 根据上述算法，初始分桶个数以及后续分桶个数都能被计算出来。跟之前只能指定固定分桶数不同，由于业务数据的变化，有可能前面分区的分桶数和后面分区的分桶数不一样，这对用户是透明的，用户无需关心每一分区具体的分桶数是多少，而这一自动推算的功能会让分桶数更加合理。
 
-开启 `autobucket` 之后，在 `show create table` 的时候看到的 `schema` 也是 `BUCKETS AUTO` .如果想要查看确切的 `bucket` 数，可以通过 `show partitions from ${table};` 来查看。
+开启 `autobucket` 之后，在 `show create table` 的时候看到的 `schema` 也是 `BUCKETS AUTO` 。如果想要查看确切的 `bucket` 数，可以通过 `show partitions from ${table};` 来查看。
