--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.5 手动分桶.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.7 数据划分/3.7.5 手动分桶.md
@@ -16,7 +16,7 @@
 
 ## 1 Bucket 的数量和数据量的建议
 
-* 一个表的 `Tablet` 总数量等于 ( `Partition num * Bucket num` )。
+* 一个表的 `Tablet` 总数量等于（ `Partition num * Bucket num` ）。
 
 * 一个表的 `Tablet` 数量，在不考虑扩容的情况下，推荐略多于整个集群的磁盘数量。
 
@@ -36,7 +36,7 @@
 
 ## 2 Random Distribution
 
-* 如果 `OLAP` 表没有更新类型的字段，将表的数据分桶模式设置为 `RANDOM` ，则可以避免严重的数据倾斜 (数据在导入表对应的分区的时候，单次导入作业每个 `batch` 的数据将随机选择一个 `tablet` 进行写入)。
+* 如果 `OLAP` 表没有更新类型的字段，将表的数据分桶模式设置为 `RANDOM` ，则可以避免严重的数据倾斜（数据在导入表对应的分区的时候，单次导入作业每个 `batch` 的数据将随机选择一个 `tablet` 进行写入）。
 
 * 当表的分桶模式被设置为 `RANDOM` 时，因为没有分桶列，无法根据分桶列的值仅对几个分桶查询，对表进行查询的时候将对命中分区的全部分桶同时扫描，该设置适合对表数据整体的聚合查询分析而不适合高并发的点查询。
 
