--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.9 自增列.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/3 数据表设计/3.9 自增列.md
@@ -146,7 +146,7 @@ mysql> select * from tbl order by id;
 
 类似地，使用 `stream load` 导入文件 `test.csv` 且不指定自增列 `id` ， `id` 列会被自动填充生成的值。
 
-`test.csv` :
+`test.csv` ：
 
 ```sql
 Tom,40
@@ -370,7 +370,7 @@ on dwd_dup_tbl.user_id = dictionary_tbl.user_id where dwd_dup_tbl.visit_time > '
 
 实际场景中也可以使用 `flink connector` 把数据写入到 `doris` 。
 
-假设 `dim1` , `dim3` , `dim5` 是我们关心的统计维度，建立如下聚合表存放聚合结果
+假设 `dim1` ， `dim3` ， `dim5` 是我们关心的统计维度，建立如下聚合表存放聚合结果
 
 ```sql
 CREATE TABLE `demo`.`dws_agg_tbl` (
@@ -396,7 +396,7 @@ from dwd_dup_tbl INNER JOIN dictionary_tbl on dwd_dup_tbl.user_id = dictionary_t
 group by dwd_dup_tbl.dim1, dwd_dup_tbl.dim3, dwd_dup_tbl.dim5;
 ```
 
-用如下语句进行 `uv` , `pv` 查询
+用如下语句进行 `uv` ， `pv` 查询
 
 ```sql
 select dim1, dim3, dim5, bitmap_count(user_id_bitmap) as uv, pv from dws_agg_tbl;
@@ -435,7 +435,7 @@ select * from records_tbl order by user_id, name limit 100;
 select * from records_tbl order by user_id, name limit 100 offset 100;
 ```
 
-然而，当进行深分页查询时 （ `offset` 很大时），即使实际需要需要的数据行很少，该方法依然会将全部数据读取到内存中进行全量排序后再进行后续处理，这种方法比较低效。可以通过自增列给每行数据一个唯一值，在查询时就可以通过记录之前页面 `unique_value` 列的最大值 `max_value` ，然后使用 `where unique_value > max_value limit rows_per_page` 的方式通过提下推谓词提前过滤大量数据，从而更高效地实现分页。
+然而，当进行深分页查询时（ `offset` 很大时），即使实际需要需要的数据行很少，该方法依然会将全部数据读取到内存中进行全量排序后再进行后续处理，这种方法比较低效。可以通过自增列给每行数据一个唯一值，在查询时就可以通过记录之前页面 `unique_value` 列的最大值 `max_value` ，然后使用 `where unique_value > max_value limit rows_per_page` 的方式通过提下推谓词提前过滤大量数据，从而更高效地实现分页。
 
 仍然以上述业务表为例，通过在表中添加一个自增列从而赋予每一行一个唯一标识：
 
