--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.3 Routine Load.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.3 Routine Load.md
@@ -1,68 +1,68 @@
 # 4.1.2.3 Routine Load
 
-Doris 可以通过 Routine Load 导入方式持续消费 Kafka Topic 中的数据。在提交 Routine Load 作业后，Doris 会持续运行该导入作业，实时生成导入任务不断消费 Kakfa 集群中指定 Topic 中的消息。
+`Doris` 可以通过 `Routine Load` 导入方式持续消费 `Kafka Topic` 中的数据。在提交 `Routine Load` 作业后， `Doris` 会持续运行该导入作业，实时生成导入任务不断消费 `Kakfa` 集群中指定 `Topic` 中的消息。
 
-Routine Load 是一个流式导入作业，支持 Exactly-Once 语义，保证数据不丢不重。
+`Routine Load` 是一个流式导入作业，支持 `Exactly-Once` 语义，保证数据不丢不重。
 
 ## 1 使用场景
 
 ### 1.1 支持数据源
 
-Routine Load 支持从 Kafka 集群中消费数据。
+`Routine Load` 支持从 `Kafka` 集群中消费数据。
 
 ### 1.2 支持数据文件格式
 
-Routine Load 支持 CSV 及 JSON 格式的数据。
+`Routine Load` 支持 `CSV` 及 `JSON` 格式的数据。
 
-在导入 CSV 格式时，需要明确区分空值（null）与空字符串（''）：
+在导入 `CSV` 格式时，需要明确区分空值（ `null` ）与空字符串（ `''` ）：
 
-* 空值（null）需要用 `\n` 表示，`a,\n,b` 数据表示中间列是一个空值（null）
+* 空值（ `null` ）需要用 `\n` 表示， `a,\n,b` 数据表示中间列是一个空值（ `null` ）
 
-* 空字符串（''）直接将数据置空，a,,b 数据表示中间列是一个空字符串（''）
+* 空字符串（ `''` ）直接将数据置空， `a,,b` 数据表示中间列是一个空字符串（ `''` ）
 
 ### 1.3 使用限制
 
-在使用 Routine Load 消费 Kafka 中数据时，有以下限制：
+在使用 `Routine Load` 消费 `Kafka` 中数据时，有以下限制：
 
-* 支持的消息格式为 CSV 及 JSON 文本格式。CSV 每一个 message 为一行，且行尾不包含换行符；
+* 支持的消息格式为 `CSV` 及 `JSON` 文本格式。 `CSV` 每一个 `message` 为一行，且行尾不包含换行符；
 
-* 默认支持 Kafka 0.10.0.0（含）以上版本。如果要使用 Kafka 0.10.0.0 以下版本（0.9.0, 0.8.2, 0.8.1, 0.8.0），需要修改 BE 的配置，将 `kafka_broker_version_fallback` 的值设置为要兼容的旧版本，或者在创建 Routine Load 的时候直接设置 `property.broker.version.fallback` 的值为要兼容的旧版本，使用旧版本的代价是 Routine Load 的部分新特性可能无法使用，如根据时间设置 Kafka 分区的 offset。
+* 默认支持 `Kafka 0.10.0.0` （含）以上版本。如果要使用 `Kafka 0.10.0.0` 以下版本（ `0.9.0` ， `0.8.2` ， `0.8.1` ， `0.8.0` ），需要修改 `BE` 的配置，将 `kafka_broker_version_fallback` 的值设置为要兼容的旧版本，或者在创建 `Routine Load` 的时候直接设置 `property.broker.version.fallback` 的值为要兼容的旧版本，使用旧版本的代价是 `Routine Load` 的部分新特性可能无法使用，如根据时间设置 `Kafka` 分区的 `offset` 。
 
 ## 2 基本原理
 
-Routine Load 会持续消费 Kafka Topic 中的数据，写入 Doris 中。
+`Routine Load` 会持续消费 `Kafka Topic` 中的数据，写入 `Doris` 中。
 
-在 Doris 中，创建 Routine Load 作业后会生成一个常驻的导入作业，包括若干个导入任务：
+在 `Doris` 中，创建 `Routine Load` 作业后会生成一个常驻的导入作业，包括若干个导入任务：
 
-* 导入作业（load job）：一个 Routine Load Job 是一个常驻的导入作业，会持续不断地消费数据源中的数据。
+* 导入作业（ `load job` ）：一个 `Routine Load Job` 是一个常驻的导入作业，会持续不断地消费数据源中的数据。
 
-* 导入任务（load task）：一个导入作业会被拆解成若干个导入任务进行实际消费，每个任务都是一个独立的事务。
+* 导入任务（ `load task` ）：一个导入作业会被拆解成若干个导入任务进行实际消费，每个任务都是一个独立的事务。
 
-Routine Load 的导入具体流程如下图展示：
+`Routine Load` 的导入具体流程如下图展示：
 
 ![](../../../../../../assets/images/Doris/routine-load-980e3f00a54145d3354f4f14d9e5d783.png)
 
-1. Client 向 FE 提交创建 Routine Load 作业请求，FE 通过 Routine Load Manager 生成一个常驻的导入作业（Routine Load Job）。
+1. `Client` 向 `FE` 提交创建 `Routine Load` 作业请求， `FE` 通过 `Routine Load Manager` 生成一个常驻的导入作业（ `Routine Load Job` ）。
 
-2. FE 通过 Job Scheduler 将 Routine Load Job 拆分成若干个 Routine Load Task，由 Task Scheduler 进行调度，下发到 BE 节点。
+2. `FE` 通过 `Job Scheduler` 将 `Routine Load Job` 拆分成若干个 `Routine Load Task` ，由 `Task Scheduler` 进行调度，下发到 `BE` 节点。
 
-3. 在 BE 上，一个 Routine Load Task 导入完成后向 FE 提交事务，并更新 Job 的元数据。
+3. 在 `BE` 上，一个 `Routine Load Task` 导入完成后向 `FE` 提交事务，并更新 `Job` 的元数据。
 
-4. 一个 Routine Load Task 提交后，会继续生成新的 Task，或对超时的 Task 进行重试。
+4. 一个 `Routine Load Task` 提交后，会继续生成新的 `Task` ，或对超时的 `Task` 进行重试。
 
-5. 新生成的 Routine Load Task 由 Task Scheduler 继续调度，不断循环。
+5. 新生成的 `Routine Load Task` 由 `Task Scheduler` 继续调度，不断循环。
 
 ## 3 快速上手
 
 ### 3.1 创建导入作业
 
-在 Doris 内可以通过 CREATE ROUTINE LOAD 命令创建常驻 Routine Load 导入任务。详细语法可以参考 CREATE ROUTINE LOAD。Routine Load 可以消费 CSV 和 JSON 的数据。
+在 `Doris` 内可以通过 `CREATE ROUTINE LOAD` 命令创建常驻 `Routine Load` 导入任务。详细语法可以参考 `CREATE ROUTINE LOAD` 。 `Routine Load` 可以消费 `CSV` 和 `JSON` 的数据。
 
 #### 3.1.1 导入 CSV 数据
 
 1. 导入数据样本
 
-    在 Kafka 中，有以下样本数据
+    在 `Kafka` 中，有以下样本数据
 
     ```shell
     kafka-console-consumer.sh --bootstrap-server localhost:9092 --topic test-routine-load-csv --from-beginnin
@@ -80,7 +80,7 @@ Routine Load 的导入具体流程如下图展示：
 
 2. 创建需要导入的表
 
-    在 Doris 中，创建被导入的表，具体语法如下
+    在 `Doris` 中，创建被导入的表，具体语法如下
 
     ```sql
     CREATE TABLE testdb.test_routineload_tbl(
@@ -92,9 +92,9 @@ Routine Load 的导入具体流程如下图展示：
     DISTRIBUTED BY HASH(user_id) BUCKETS 10;
     ```
 
-3. 创建 Routine Load 导入作业
+3. 创建 `Routine Load` 导入作业
 
-    在 Doris 中，使用 CREATE ROUTINE LOAD 命令，创建导入作业
+    在 `Doris` 中，使用 `CREATE ROUTINE LOAD` 命令，创建导入作业
 
     ```sql
     CREATE ROUTINE LOAD testdb.example_routine_load_csv ON test_routineload_tbl
@@ -111,7 +111,7 @@ Routine Load 的导入具体流程如下图展示：
 
 1. 导入样本数据
 
-    在 Kafka 中，有以下样本数据
+    在 `Kafka` 中，有以下样本数据
 
     ```shell
     kafka-console-consumer.sh --bootstrap-server localhost:9092 --topic test-routine-load-json --from-beginning
@@ -129,7 +129,7 @@ Routine Load 的导入具体流程如下图展示：
 
 2. 创建需要导入的表
 
-    在 Doris 中，创建被导入的表，具体语法如下
+    在 `Doris` 中，创建被导入的表，具体语法如下
 
     ```sql
     CREATE TABLE testdb.test_routineload_tbl(
@@ -141,9 +141,9 @@ Routine Load 的导入具体流程如下图展示：
     DISTRIBUTED BY HASH(user_id) BUCKETS 10;
     ```
 
-3. 创建 Routine Load 导入作业
+3. 创建 `Routine Load` 导入作业
 
-    在 Doris 中，使用 CREATE ROUTINE LOAD 命令，创建导入作业
+    在 `Doris` 中，使用 `CREATE ROUTINE LOAD` 命令，创建导入作业
 
     ```sql
     CREATE ROUTINE LOAD testdb.example_routine_load_json ON test_routineload_tbl
@@ -161,17 +161,17 @@ Routine Load 的导入具体流程如下图展示：
 
 ### 3.2 查看导入状态
 
-在 Doris 中，可以查看 Routine Load 的导入作业情况和导入任务情况：
+在 `Doris` 中，可以查看 `Routine Load` 的导入作业情况和导入任务情况：
 
 * 导入作业：主要用于查看导入任务目标表、子任务数量、导入延迟状态、导入配置与导入结果等信息；
 
-* 导入任务：主要用于查看导入的子任务状态、消费进度以及下发的 BE 节点。
+* 导入任务：主要用于查看导入的子任务状态、消费进度以及下发的 `BE` 节点。
 
 #### 3.2.1 查看导入运行任务
 
-可以通过 SHOW ROUTINE LOAD 命令查看导入作业情况。SHOW ROUTINE LOAD 描述了当前作业的基本情况，如导入目标表、导入延迟状态、导入配置信息、导入错误信息等。
+可以通过 `SHOW ROUTINE LOAD` 命令查看导入作业情况。 `SHOW ROUTINE LOAD` 描述了当前作业的基本情况，如导入目标表、导入延迟状态、导入配置信息、导入错误信息等。
 
-如通过以下命令可以查看 testdb.example_routine_load_csv 的任务情况：
+如通过以下命令可以查看 `testdb.example_routine_load_csv` 的任务情况：
 
 ```sql
 mysql> SHOW ROUTINE LOAD FOR testdb.example_routine_load\G
@@ -203,9 +203,9 @@ ReasonOfStateChanged:
 
 #### 3.2.2 查看导入运行作业
 
-可以通过 SHOW ROUTINE LOAD TASK 命令查看导入子任务情况。SHOW ROUTINE LOAD TASK 描述了当前作业下的子任务信息，如子任务状态，下发 BE id 等信息。
+可以通过 `SHOW ROUTINE LOAD TASK` 命令查看导入子任务情况。 `SHOW ROUTINE LOAD TASK` 描述了当前作业下的子任务信息，如子任务状态，下发 `BE id` 等信息。
 
-如通过以下命令可以查看 testdb.example_routine_load_csv 的任务情况：
+如通过以下命令可以查看 `testdb.example_routine_load_csv` 的任务情况：
 
 ```sql
 mysql> SHOW ROUTINE LOAD TASK WHERE jobname = 'example_routine_load_csv';
@@ -222,9 +222,9 @@ mysql> SHOW ROUTINE LOAD TASK WHERE jobname = 'example_routine_load_csv';
 
 ### 3.3 暂停导入作业
 
-可以通过 PAUSE ROUTINE LOAD 命令暂停导入作业。暂停导入作业后，会进入 PAUSED 状态，但导入作业并未终止，可以通过 RESUME ROUTINE LOAD 命令重启导入作业。
+可以通过 `PAUSE ROUTINE LOAD` 命令暂停导入作业。暂停导入作业后，会进入 `PAUSED` 状态，但导入作业并未终止，可以通过 `RESUME ROUTINE LOAD` 命令重启导入作业。
 
-如通过以下命令可以暂停 testdb.example_routine_load_csv 导入作业：
+如通过以下命令可以暂停 `testdb.example_routine_load_csv` 导入作业：
 
 ```sql
 PAUSE ROUTINE LOAD FOR testdb.example_routine_load_csv;
@@ -232,9 +232,9 @@ PAUSE ROUTINE LOAD FOR testdb.example_routine_load_csv;
 
 ### 3.4 恢复导入作业
 
-可以通过 RESUME ROUTINE LOAD 命令恢复导入作业。
+可以通过 `RESUME ROUTINE LOAD` 命令恢复导入作业。
 
-如通过以下命令可以恢复 testdb.example_routine_load_csv 导入作业：
+如通过以下命令可以恢复 `testdb.example_routine_load_csv` 导入作业：
 
 ```sql
 RESUME ROUTINE LOAD FOR testdb.example_routine_load_csv;
@@ -242,9 +242,9 @@ RESUME ROUTINE LOAD FOR testdb.example_routine_load_csv;
 
 ### 3.5 修改导入作业
 
-可以通过 ALTER ROUTINE LOAD 命令修改已创建的导入作业。在修改导入作业前，需要使用 PAUSE ROUTINE LOAD 暂停导入作业，修改后需要使用 RESUME ROUTINE LOAD 恢复导入作业。
+可以通过 `ALTER ROUTINE LOAD` 命令修改已创建的导入作业。在修改导入作业前，需要使用 `PAUSE ROUTINE LOAD` 暂停导入作业，修改后需要使用 `RESUME ROUTINE LOAD` 恢复导入作业。
 
-如通过以下命令可以修改期望导入任务并行度参数 desired_concurrent_number，并修改 Kafka Topic 信息：
+如通过以下命令可以修改期望导入任务并行度参数 `desired_concurrent_number` ，并修改 `Kafka Topic` 信息：
 
 ```sql
 ALTER ROUTINE LOAD FOR testdb.example_routine_load_csv
@@ -259,9 +259,9 @@ FROM KAFKA(
 
 ### 3.6 取消导入作业
 
-可以通过 STOP ROUTINE LOAD 命令停止并删除 Routine Load 导入作业。删除后的导入作业无法被恢复，也无法通过 SHOW ROUTINE LOAD 命令查看。
+可以通过 `STOP ROUTINE LOAD` 命令停止并删除 `Routine Load` 导入作业。删除后的导入作业无法被恢复，也无法通过 `SHOW ROUTINE LOAD` 命令查看。
 
-可以通过以下命令停止并删除导入作业 testdb.example_routine_load_csv：
+可以通过以下命令停止并删除导入作业 `testdb.example_routine_load_csv` ：
 
 ```sql
 STOP ROUTINE LOAD FOR testdb.example_routine_load_csv;
@@ -271,7 +271,7 @@ STOP ROUTINE LOAD FOR testdb.example_routine_load_csv;
 
 ### 4.1 导入命令
 
-创建一个 Routine Load 常驻导入作业语法如下：
+创建一个 `Routine Load` 常驻导入作业语法如下：
 
 ```sql
 CREATE ROUTINE LOAD [<db_name>.]<job_name> [ON <tbl_name>]
@@ -299,89 +299,89 @@ FROM KAFKA [data_source_properties]
 
 #### 4.2.1 FE 配置参数
 
-max_routine_load_task_concurrent_num
+`max_routine_load_task_concurrent_num`
 
-* 默认值：256
-
-* 动态配置：是
-
-* FE Master 独有配置：是
-
-* 参数描述：限制 Routine Load 的导入作业最大子并发数量。建议维持在默认值。如果设置过大，可能导致并发任务数过多，占用集群资源。
-
-max_routine_load_task_num_per_be
-
-* 默认值：1024
+* 默认值： `256`
 
 * 动态配置：是
 
-* FE Master 独有配置：是
+* `FE Master` 独有配置：是
 
-* 参数描述：每个 BE 限制的最大并发 Routine Load 任务数。 `max_routine_load_task_num_per_be` 应该小 `routine_load_thread_pool_size` 于参数。
+* 参数描述：限制 `Routine Load` 的导入作业最大子并发数量。建议维持在默认值。如果设置过大，可能导致并发任务数过多，占用集群资源。
 
-max_routine_load_job_num
+`max_routine_load_task_num_per_be`
 
-* 默认值：100
-
-* 动态配置：是
-
-* FE Master 独有配置：是
-
-* 参数描述：限制最大 Routine Load 作业数，包括 NEED_SCHEDULED，RUNNING，PAUSE
-
-max_tolerable_backend_down_num
-
-* 默认值：0
+* 默认值： `1024`
 
 * 动态配置：是
 
-* FE Master 独有配置：是
+* `FE Master` 独有配置：是
 
-* 参数描述：只要有一个 BE 宕机，Routine Load 就无法自动恢复。在满足某些条件时，Doris 可以将 PAUSED 的任务重新调度，转换为 RUNNING 状态。该参数为 0 表示只有所有 BE 节点都是 alive 状态踩允许重新调度。
+* 参数描述：每个 `BE` 限制的最大并发 `Routine Load` 任务数。 `max_routine_load_task_num_per_be` 应该小 `routine_load_thread_pool_size` 于参数。
 
-period_of_auto_resume_min
+`max_routine_load_job_num`
 
-* 默认值：5（分钟）
+* 默认值： `100`
 
 * 动态配置：是
 
-* FE Master 独有配置：是
+* `FE Master` 独有配置：是
 
-* 参数描述：自动恢复 Routine Load 的周期
+* 参数描述：限制最大 `Routine Load` 作业数，包括 `NEED_SCHEDULED` ， `RUNNING` ， `PAUSE`
+
+`max_tolerable_backend_down_num`
+
+* 默认值： `0`
+
+* 动态配置：是
+
+* `FE Master` 独有配置：是
+
+* 参数描述：只要有一个 `BE` 宕机， `Routine Load` 就无法自动恢复。在满足某些条件时， `Doris` 可以将 `PAUSED` 的任务重新调度，转换为 `RUNNING` 状态。该参数为 `0` 表示只有所有 `BE` 节点都是 `alive` 状态踩允许重新调度。
+
+`period_of_auto_resume_min`
+
+* 默认值： `5` （分钟）
+
+* 动态配置：是
+
+* `FE Master` 独有配置：是
+
+* 参数描述：自动恢复 `Routine Load` 的周期
 
 #### 4.2.2 BE 配置参数
 
-max_consumer_num_per_group
+`max_consumer_num_per_group`
 
-* 默认值：3
+* 默认值： `3`
 
 * 动态配置：是
 
-* 描述：一个子任务重最多生成几个 consumer 消费数据。对于 Kafka 数据源，一个 consumer 可能消费一个或多个 Kafka Partition。假设一个任务需要消费 6 个 Kafka Partitio，则会生成 3 个 consumer，每个 consumer 消费 2 个 partition。如果只有 2 个 partition，则只会生成 2 个 consumer，每个 consumer 消费 1 个 partition。
+* 描述：一个子任务重最多生成几个 `consumer` 消费数据。对于 `Kafka` 数据源，一个 `consumer` 可能消费一个或多个 `Kafka Partition` 。假设一个任务需要消费 `6` 个 `Kafka Partitio` ，则会生成 `3` 个 `consumer` ，每个 `consumer` 消费 `2` 个 `partition` 。如果只有 `2` 个 `partition` ，则只会生成 `2` 个 `consumer` ，每个 `consumer` 消费 `1` 个 `partition` 。
 
 #### 4.2.3 导入配置参数
 
-在创建 Routine Load 作业时，可以通过 CREATE ROUTINE LOAD 命令指定不同模块的导入配置参数。
+在创建 `Routine Load` 作业时，可以通过 `CREATE ROUTINE LOAD` 命令指定不同模块的导入配置参数。
 
-tbl_name 子句
+`tbl_name` 子句
 
 指定需要导入的表的名称，可选参数。
 
-如果不指定，则采用动态表的方式，这个时候需要 Kafka 中的数据包含表名的信息。目前仅支持从 Kafka 的 Value 中获取动态表名，且需要符合这种格式：以 json 为例： `table_name|{"col1": "val1", "col2": "val2"}` , 其中 `tbl_name` 为表名，以 | 作为表名和表数据的分隔符。CSV 格式的数据也是类似的，如： `table_name|val1,val2,val3` 。注意，这里的 `table_name` 必须和 Doris 中的表名一致，否则会导致导入失败。注意，动态表不支持后面介绍的 column_mapping 配置。
+如果不指定，则采用动态表的方式，这个时候需要 `Kafka` 中的数据包含表名的信息。目前仅支持从 `Kafka` 的 `Value` 中获取动态表名，且需要符合这种格式：以 `json` 为例： `table_name|{"col1": "val1", "col2": "val2"}` ，其中 `tbl_name` 为表名，以 `|` 作为表名和表数据的分隔符。 `CSV` 格式的数据也是类似的，如： `table_name|val1,val2,val3` 。注意，这里的 `table_name` 必须和 `Doris` 中的表名一致，否则会导致导入失败。注意，动态表不支持后面介绍的 `column_mapping` 配置。
 
-merge_type 子句
+`merge_type` 子句
 
-可以通过 merge_type 模块指定数据合并的类型。merge_type 有三种选项：
+可以通过 `merge_type` 模块指定数据合并的类型。 `merge_type` 有三种选项：
 
-* APPEND：追加导入方式
+* `APPEND` ：追加导入方式
 
-* MERGE：合并导入方式。仅适用于 Unique Key 模型。需要配合 [DELETE ON] 模块，以标注 Delete Flag 列
+* `MERGE` ：合并导入方式。仅适用于 `Unique Key` 模型。需要配合 `[DELETE ON]` 模块，以标注 `Delete Flag` 列
 
-* DELETE：导入的数据皆为需要删除的数据
+* `DELETE` ：导入的数据皆为需要删除的数据
 
-load_properties 子句
+`load_properties` 子句
 
-可以通过 load_properties 模块描述导入数据的属性，具体语法如下
+可以通过 `load_properties` 模块描述导入数据的属性，具体语法如下
 
 ```sql
 [COLUMNS TERMINATED BY <column_separator>,]
@@ -404,15 +404,15 @@ load_properties 子句
 | DELETE ON | <delete_expr> | 在 MERGE 导入模式下，使用 delete_expr 标记哪些列需要被删除。如需要在 MERGE 时删除 age > 30 的列，可以使用，可以使用以下命令： `DELETE ON age > 30` |
 | ORDER BY | <order_by_column> | 进针对 Unique Key 模型生效。用于指定导入数据中的 Sequence Column 列，以保证数据的顺序。如在 Unique Key 表导入时，需要指定导入的 Sequence Column 为 create_time，可以使用以下命令： `ORDER BY create_time` 针对与 Unique Key 模型 Sequence Column 列的描述，可以参考文档 数据更新/Sequence 列 |
 
-job_properties 子句
+`job_properties` 子句
 
-在创建 Routine Load 导入作业时，可以指定 job_properties 子句以指定导入作业的属性。语法如下：
+在创建 `Routine Load` 导入作业时，可以指定 `job_properties` 子句以指定导入作业的属性。语法如下：
 
 ```shell
 PROPERTIES ("<key1>" = "<value1>"[, "<key2>" = "<value2>" ...])
 ```
 
-job_properties 子句具体参数选项如下：
+`job_properties` 子句具体参数选项如下：
 
 | 参数 | 说明 |
 | -- | -- |
@@ -436,13 +436,13 @@ job_properties 子句具体参数选项如下：
 
 #### 4.2.4 data_source_properties 子句
 
-在创建 Routine Load 导入作业时，可以指定 data_source_properties 子句以指定 Kafka 数据源的属性。语法如下：
+在创建 `Routine Load` 导入作业时，可以指定 `data_source_properties` 子句以指定 `Kafka` 数据源的属性。语法如下：
 
 ```sql
 FROM KAFKA ("<key1>" = "<value1>"[, "<key2>" = "<value2>" ...])
 ```
 
-data_source_properties 子句具体参数选项如下：
+`data_source_properties` 子句具体参数选项如下：
 
 | 参数 | 说明 |
 | -- | -- |
@@ -454,13 +454,13 @@ data_source_properties 子句具体参数选项如下：
 
 ### 4.3 导入状态
 
-通过 SHOW ROUTINE LOAD 命令可以查看导入作业的状态，具体语法如下：
+通过 `SHOW ROUTINE LOAD` 命令可以查看导入作业的状态，具体语法如下：
 
 ```sql
 SHOW [ALL] ROUTINE LOAD [FOR jobName];
 ```
 
-如通过 SHOW ROUTINE LOAD 会返回以下结果集示例：
+如通过 `SHOW ROUTINE LOAD` 会返回以下结果集示例：
 
 ```sql
 mysql> SHOW ROUTINE LOAD FOR testdb.example_routine_load\G
@@ -837,7 +837,7 @@ ReasonOfStateChanged:
 
 ### 5.7 设置 merge_type
 
-1. 指定 merge_type 进行 delete 操作
+1. 指定 `merge_type` 进行 `delete` 操作
 
     ```text
     导入数据样例
@@ -1789,9 +1789,9 @@ ReasonOfStateChanged:
 
 ### 5.13 一流多表导入
 
-为 example_db 创建一个名为 test1 的 Kafka 例行动态多表导入任务。指定列分隔符和 group.id 和 client.id，并且自动默认消费所有分区，且从有数据的位置（OFFSET_BEGINNING）开始订阅。
+为 `example_db` 创建一个名为 `test1` 的 `Kafka` 例行动态多表导入任务。指定列分隔符和 `group.id` 和 `client.id` ，并且自动默认消费所有分区，且从有数据的位置（ `OFFSET_BEGINNING` ）开始订阅。
 
-这里假设需要将 Kafka 中的数据导入到 example_db 中的 tbl1 以及 tbl2 表中，我们创建了一个名为 test1 的例行导入任务，同时将名为 `my_topic` 的 Kafka 的 Topic 数据同时导入到 tbl1 和 tbl2 中的数据中，这样就可以通过一个例行导入任务将 Kafka 中的数据导入到两个表中。
+这里假设需要将 `Kafka` 中的数据导入到 `example_db` 中的 `tbl1` 以及 `tbl2` 表中，我们创建了一个名为 `test1` 的例行导入任务，同时将名为 `my_topic` 的 `Kafka` 的 `Topic` 数据同时导入到 `tbl1` 和 `tbl2` 中的数据中，这样就可以通过一个例行导入任务将 `Kafka` 中的数据导入到两个表中。
 
 ```sql
 CREATE ROUTINE LOAD example_db.test1
@@ -1803,11 +1803,11 @@ FROM KAFKA
 );
 ```
 
-这个时候需要 Kafka 中的数据包含表名的信息。目前仅支持从 Kafka 的 Value 中获取动态表名，且需要符合这种格式：以 JSON 为例： `table_name|{"col1": "val1", "col2": "val2"}` , 其中  `tbl_name` 为表名，以 `|` 作为表名和表数据的分隔符。CSV 格式的数据也是类似的，如： `table_name|val1,val2,val3` 。注意，这里的 `table_name` 必须和 Doris 中的表名一致，否则会导致导入失败。注意，动态表不支持后面介绍的 column_mapping 配置。
+这个时候需要 `Kafka` 中的数据包含表名的信息。目前仅支持从 `Kafka` 的 `Value` 中获取动态表名，且需要符合这种格式：以 `JSON` 为例： `table_name|{"col1": "val1", "col2": "val2"}` ，其中 `tbl_name` 为表名，以 `|` 作为表名和表数据的分隔符。 `CSV` 格式的数据也是类似的，如： `table_name|val1,val2,val3` 。注意，这里的 `table_name` 必须和 `Doris` 中的表名一致，否则会导致导入失败。注意，动态表不支持后面介绍的 `column_mapping` 配置。
 
 ### 5.14 严格模式导入
 
-为 example_db 的 example_tbl 创建一个名为 test1 的 Kafka 例行导入任务。导入任务为严格模式。
+为 `example_db` 的 `example_tbl` 创建一个名为 `test1` 的 `Kafka` 例行导入任务。导入任务为严格模式。
 
 ```sql
 CREATE ROUTINE LOAD example_db.test1 ON example_tbl
@@ -1827,4 +1827,4 @@ FROM KAFKA
 
 ## 6 更多帮助
 
-参考 SQL 手册 Routine Load。也可以在客户端命令行下输入 `HELP ROUTINE LOAD` 获取更多帮助信息。
+参考 `SQL` 手册 `Routine Load` 。也可以在客户端命令行下输入 `HELP ROUTINE LOAD` 获取更多帮助信息。
