--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.3 数据删除/4.3.5 临时分区.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.3 数据删除/4.3.5 临时分区.md
@@ -1,6 +1,6 @@
 # 4.3.5 临时分区
 
-Doris 支持在分区表中添加临时分区，临时分区和正式分区不同的是，临时分区不会被正式查询查询到，只有通过特殊的查询语句才能查询。
+`Doris` 支持在分区表中添加临时分区，临时分区和正式分区不同的是，临时分区不会被正式查询查询到，只有通过特殊的查询语句才能查询。
 
 * 临时分区的分区列和正式分区相同，且不可修改。
 
@@ -86,15 +86,15 @@ PROPERTIES (
 
 替换操作有两个特殊的可选参数：
 
-1. strict_range
+1. `strict_range`
 
-    默认为 true。
+    默认为 `true` 。
 
-    对于 Range 分区，当该参数为 true 时，表示要被替换的所有正式分区的范围并集需要和替换的临时分区的范围并集完全相同。当置为 false 时，只需要保证替换后，新的正式分区间的范围不重叠即可。
+    对于 `Range` 分区，当该参数为 `true` 时，表示要被替换的所有正式分区的范围并集需要和替换的临时分区的范围并集完全相同。当置为 `false` 时，只需要保证替换后，新的正式分区间的范围不重叠即可。
 
-    对于 List 分区，该参数恒为 true。要被替换的所有正式分区的枚举值必须和替换的临时分区枚举值完全相同。
+    对于 `List` 分区，该参数恒为 `true` 。要被替换的所有正式分区的枚举值必须和替换的临时分区枚举值完全相同。
 
-    示例 1
+    示例 `1`
 
     ```text
     待替换的分区 p1, p2, p3 的范围 (=> 并集)：
@@ -106,7 +106,7 @@ PROPERTIES (
     范围并集相同，则可以使用 tp1 和 tp2 替换 p1, p2, p3。
     ```
 
-    示例 2
+    示例 `2`
 
     ```text
     待替换的分区 p1 的范围 (=> 并集)：
@@ -118,7 +118,7 @@ PROPERTIES (
     范围并集不相同，如果 strict_range 为 true，则不可以使用 tp1 和 tp2 替换 p1。如果为 false，且替换后的两个分区范围 [10, 30), [40, 50) 和其他正式分区不重叠，则可以替换。
     ```
 
-    示例 3
+    示例 `3`
 
     ```text
     待替换的分区 p1, p2 的枚举值(=> 并集)：
@@ -130,7 +130,7 @@ PROPERTIES (
     枚举值并集相同，可以使用 tp1，tp2，tp3 替换 p1，p2
     ```
 
-    示例 4
+    示例 `4`
 
     ```text
     待替换的分区 p1, p2，p3 的枚举值(=> 并集)：
@@ -142,31 +142,31 @@ PROPERTIES (
     枚举值并集相同，可以使用 tp1，tp2 替换 p1，p2，p3
     ```
 
-2. use_temp_partition_name
+2. `use_temp_partition_name`
 
-    默认为 false。
+    默认为 `false` 。
 
-    当该参数为 false，并且待替换的分区和替换分区的个数相同时，则替换后的正式分区名称维持不变。
+    当该参数为 `false` ，并且待替换的分区和替换分区的个数相同时，则替换后的正式分区名称维持不变。
 
-    如果为 true，则替换后，正式分区的名称为替换分区的名称。下面举例说明：
+    如果为 `true` ，则替换后，正式分区的名称为替换分区的名称。下面举例说明：
 
-    示例 1
+    示例 `1`
 
     ```sql
     ALTER TABLE tbl1 REPLACE PARTITION (p1) WITH TEMPORARY PARTITION (tp1);
     ```
 
-    * use_temp_partition_name 默认为 false，则在替换后，分区的名称依然为 p1，但是相关的数据和属性都替换为 tp1 的。
+    * `use_temp_partition_name` 默认为 `false` ，则在替换后，分区的名称依然为 `p1` ，但是相关的数据和属性都替换为 `tp1` 的。
 
-    * 如果 use_temp_partition_name 默认为 true，则在替换后，分区的名称为 tp1。p1 分区不再存在。
+    * 如果 `use_temp_partition_name` 默认为 `true` ，则在替换后，分区的名称为 `tp1` 。 `p1` 分区不再存在。
 
-    示例 2
+    示例 `2`
 
     ```sql
     ALTER TABLE tbl1 REPLACE PARTITION (p1, p2) WITH TEMPORARY PARTITION (tp1);
     ```
 
-    * use_temp_partition_name 默认为 false，但因为待替换分区的个数和替换分区的个数不同，则该参数无效。替换后，分区名称为 tp1，p1 和 p2 不再存在。
+    * `use_temp_partition_name` 默认为 `false` ，但因为待替换分区的个数和替换分区的个数不同，则该参数无效。替换后，分区名称为 `tp1` ， `p1` 和 `p2` 不再存在。
 
     !!! tip
 
@@ -214,22 +214,22 @@ WHERE ...;
 
 **DROP**
 
-* 使用 Drop 操作直接删除数据库或表后，可以通过 Recover 命令恢复数据库或表（限定时间内），但临时分区不会被恢复。
+* 使用 `Drop` 操作直接删除数据库或表后，可以通过 `Recover` 命令恢复数据库或表（限定时间内），但临时分区不会被恢复。
 
-* 使用 Alter 命令删除正式分区后，可以通过 Recover 命令恢复分区（限定时间内）。操作正式分区和临时分区无关。
+* 使用 `Alter` 命令删除正式分区后，可以通过 `Recover` 命令恢复分区（限定时间内）。操作正式分区和临时分区无关。
 
-* 使用 Alter 命令删除临时分区后，无法通过 Recover 命令恢复临时分区。
+* 使用 `Alter` 命令删除临时分区后，无法通过 `Recover` 命令恢复临时分区。
 
 **TRUNCATE**
 
-* 使用 Truncate 命令清空表，表的临时分区会被删除，且不可恢复。
+* 使用 `Truncate` 命令清空表，表的临时分区会被删除，且不可恢复。
 
-* 使用 Truncate 命令清空正式分区时，不影响临时分区。
+* 使用 `Truncate` 命令清空正式分区时，不影响临时分区。
 
-* 不可使用 Truncate 命令清空临时分区。
+* 不可使用 `Truncate` 命令清空临时分区。
 
 **ALTER**
 
-* 当表存在临时分区时，无法使用 Alter 命令对表进行 Schema Change、Rollup 等变更操作。
+* 当表存在临时分区时，无法使用 `Alter` 命令对表进行 `Schema Change` 、 `Rollup` 等变更操作。
 
 * 当表在进行变更操作时，无法对表添加临时分区。
