--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.6 Group Commit.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.2 导入方式/4.1.2.6 Group Commit.md
@@ -1,24 +1,24 @@
 # 4.1.2.6 Group Commit
 
-Group Commit 不是一种新的导入方式，而是对 `INSERT INTO tbl VALUES(...)、Stream Load、Http Stream` 的扩展，大幅提升了高并发小写入的性能。您的应用程序可以直接使用 JDBC 将数据高频写入 Doris，同时通过使用 PreparedStatement 可以获得更高的性能。在日志场景下，您也可以利用 Stream Load 或者 Http Stream 将数据高频写入 Doris。
+`Group Commit` 不是一种新的导入方式，而是对 `INSERT INTO tbl VALUES(...),Stream Load,Http Stream` 的扩展，大幅提升了高并发小写入的性能。您的应用程序可以直接使用 `JDBC` 将数据高频写入 `Doris` ，同时通过使用 `PreparedStatement` 可以获得更高的性能。在日志场景下，您也可以利用 `Stream Load` 或者 `Http Stream` 将数据高频写入 `Doris` 。
 
 ## 1 Group Commit 模式
 
-Group Commit 写入有三种模式，分别是：
+`Group Commit` 写入有三种模式，分别是：
 
 * 关闭模式（ `off_mode` ）
 
-    不开启 Group Commit，保持以上三种导入方式的默认行为。
+    不开启 `Group Commit` ，保持以上三种导入方式的默认行为。
 
 * 同步模式（ `sync_mode` ）
 
-    Doris 根据负载和表的 group_commit_interval属性将多个导入在一个事务提交，事务提交后导入返回。这适用于高并发写入场景，且在导入完成后要求数据立即可见。
+    `Doris` 根据负载和表的 `group_commit_interval` 属性将多个导入在一个事务提交，事务提交后导入返回。这适用于高并发写入场景，且在导入完成后要求数据立即可见。
 
 * 异步模式（ `async_mode` ）
 
-    Doris 首先将数据写入 WAL ( `Write Ahead Log` )，然后导入立即返回。Doris 会根据负载和表的 `group_commit_interval` 属性异步提交数据，提交之后数据可见。为了防止 WAL 占用较大的磁盘空间，单次导入数据量较大时，会自动切换为 `sync_mode` 。这适用于写入延迟敏感以及高频写入的场景。
+    `Doris` 首先将数据写入 `WAL` （ `Write Ahead Log` ），然后导入立即返回。 `Doris` 会根据负载和表的 `group_commit_interval` 属性异步提交数据，提交之后数据可见。为了防止 `WAL` 占用较大的磁盘空间，单次导入数据量较大时，会自动切换为 `sync_mode` 。这适用于写入延迟敏感以及高频写入的场景。
 
-    WAL的数量可以通过FE http接口查看，具体可见这里，也可以在BE的metrics中搜索关键词 `wal` 查看。
+    `WAL` 的数量可以通过 `FE http` 接口查看，具体可见这里，也可以在 `BE` 的 `metrics` 中搜索关键词 `wal` 查看。
 
 ## 2 Group Commit 使用方式
 
@@ -39,23 +39,23 @@ PROPERTIES (
 
 ### 2.1 使用 JDBC
 
-当用户使用 JDBC `insert into values` 方式写入时，为了减少 SQL 解析和生成规划的开销，我们在 FE 端支持了 MySQL 协议的 `PreparedStatement` 特性。当使用 `PreparedStatement` 时，SQL 和其导入规划将被缓存到 Session 级别的内存缓存中，后续的导入直接使用缓存对象，降低了 FE 的 CPU 压力。下面是在 JDBC 中使用 `PreparedStatement` 的例子：
+当用户使用 `JDBC insert into values` 方式写入时，为了减少 `SQL` 解析和生成规划的开销，我们在 `FE` 端支持了 `MySQL` 协议的 `PreparedStatement` 特性。当使用 `PreparedStatement` 时， `SQL` 和其导入规划将被缓存到 `Session` 级别的内存缓存中，后续的导入直接使用缓存对象，降低了 `FE` 的 `CPU` 压力。下面是在 `JDBC` 中使用 `PreparedStatement` 的例子：
 
-1. 设置 JDBC URL 并在 Server 端开启 Prepared Statement
+1. 设置 `JDBC URL` 并在 `Server` 端开启 `Prepared Statement`
 
     ```java
     url = jdbc:mysql://127.0.0.1:9030/db?useServerPrepStmts=true&useLocalSessionState=true&rewriteBatchedStatements=true&cachePrepStmts=true&prepStmtCacheSqlLimit=99999&prepStmtCacheSize=500
     ```
 
-2. 配置 `group_commit` session 变量，有如下两种方式：
+2. 配置 `group_commit session` 变量，有如下两种方式：
 
-    * 通过 JDBC url 设置，增加sessionVariables=group_commit=async_mode
+    * 通过 `JDBC url` 设置，增加 `sessionVariables=group_commit=async_mode`
 
         ```java
         url = jdbc:mysql://127.0.0.1:9030/db?useServerPrepStmts=true&useLocalSessionState=true&rewriteBatchedStatements=true&cachePrepStmts=true&prepStmtCacheSqlLimit=99999&prepStmtCacheSize=500&sessionVariables=group_commit=async_mode&sessionVariables=enable_nereids_planner=false
         ```
 
-    * 通过执行 SQL 设置
+    * 通过执行 `SQL` 设置
 
         ```java
         try (Statement statement = conn.createStatement()) {
@@ -104,7 +104,7 @@ PROPERTIES (
 
 !!! warning
 
-    由于高频的insert into语句会打印大量的audit log，对最终性能有一定影响，默认关闭了打印prepared语句的audit log。可以通过设置session variable的方式控制是否打印prepared语句的audit log。
+    由于高频的 `insert into` 语句会打印大量的 `audit log` ，对最终性能有一定影响，默认关闭了打印 `prepared` 语句的 `audit log` 。可以通过设置 `session variable` 的方式控制是否打印 `prepared` 语句的 `audit log` 。
 
 ```sql
 # 配置 session 变量开启打印parpared语句的audit log, 默认为false即关闭打印parpared语句的audit log
@@ -112,11 +112,11 @@ PROPERTIES (
 set enable_prepared_stmt_audit_log=true;
 ```
 
-关于 JDBC 的更多用法，参考使用 Insert 方式同步数据。
+关于 `JDBC` 的更多用法，参考使用 `Insert` 方式同步数据。
 
 ### 2.2 使用Golang进行Group Commit
 
-Golang的prepared语句支持有限，所以我们可以通过手动客户端攒批的方式提高Group Commit的性能，以下为一个示例程序。
+`Golang` 的 `prepared` 语句支持有限，所以我们可以通过手动客户端攒批的方式提高 `Group Commit` 的性能，以下为一个示例程序。
 
 ```go
 package main
@@ -360,7 +360,7 @@ func logInsertStatistics() {
     # 返回的 Label 是 group_commit 开头的，是真正消费数据的导入关联的 label
     ```
 
-关于 Stream Load 使用的更多详细语法及最佳实践，请参阅 Stream Load。
+关于 `Stream Load` 使用的更多详细语法及最佳实践，请参阅 `Stream Load` 。
 
 ### 2.5 Http Stream
 
@@ -422,15 +422,15 @@ func logInsertStatistics() {
     # 返回的 Label 是 group_commit 开头的，是真正消费数据的导入关联的 label
     ```
 
-关于 Http Stream 使用的更多详细语法及最佳实践，请参阅 Stream Load。
+关于 `Http Stream` 使用的更多详细语法及最佳实践，请参阅 `Stream Load` 。
 
 ## 3 自动提交条件
 
-当满足时间间隔 (默认为 10 秒) 或数据量 (默认为 64 MB) 其中一个条件时，会自动提交数据。
+当满足时间间隔（默认为 `10` 秒）或数据量（默认为 `64 MB` ）其中一个条件时，会自动提交数据。
 
 ### 3.1 修改提交间隔
 
-默认提交间隔为 10 秒，用户可以通过修改表的配置调整：
+默认提交间隔为 `10` 秒，用户可以通过修改表的配置调整：
 
 ```sql
 # 修改提交间隔为 2 秒
@@ -440,7 +440,7 @@ ALTER TABLE dt SET ("group_commit_interval_ms" = "2000");
 
 ### 3.2 修改提交数据量
 
-Group Commit 的默认提交数据量为 64 MB，用户可以通过修改表的配置调整：
+`Group Commit` 的默认提交数据量为 `64 MB` ，用户可以通过修改表的配置调整：
 
 ```sql
 # 修改提交数据量为 128MB
@@ -450,99 +450,99 @@ ALTER TABLE dt SET ("group_commit_data_bytes" = "134217728");
 
 ## 4 使用限制
 
-* 当开启了 Group Commit 模式，系统会判断用户发起的 `INSERT INTO VALUES` 语句是否符合 Group Commit 的条件，如果符合，该语句的执行会进入到 Group Commit 写入中。符合以下条件会自动退化为非 Group Commit 方式：
+* 当开启了 `Group Commit` 模式，系统会判断用户发起的 `INSERT INTO VALUES` 语句是否符合 `Group Commit` 的条件，如果符合，该语句的执行会进入到 `Group Commit` 写入中。符合以下条件会自动退化为非 `Group Commit` 方式：
 
     * 事务写入，即 `Begin; INSERT INTO VALUES; COMMIT` 方式
 
-    * 指定 Label，即 `INSERT INTO dt WITH LABEL {label} VALUES`
+    * 指定 `Label` ，即 `INSERT INTO dt WITH LABEL {label} VALUES`
 
-    * VALUES 中包含表达式，即 `INSERT INTO dt VALUES (1 + 100)`
+    * `VALUES` 中包含表达式，即 `INSERT INTO dt VALUES (1 + 100)`
 
     * 列更新写入
 
-    * 表不支持 light schema change
+    * 表不支持 `light schema change`
 
-* 当开启了 Group Commit 模式，系统会判断用户发起的 `Stream Load` 和 `Http Stream` 是否符合 Group Commit 的条件，如果符合，该导入的执行会进入到 Group Commit 写入中。符合以下条件的会自动退化为非 Group Commit 方式：
+* 当开启了 `Group Commit` 模式，系统会判断用户发起的 `Stream Load` 和 `Http Stream` 是否符合 `Group Commit` 的条件，如果符合，该导入的执行会进入到 `Group Commit` 写入中。符合以下条件的会自动退化为非 `Group Commit` 方式：
 
     * 两阶段提交
 
-    * 指定 Label，即通过 `-H "label:my_label"` 设置
+    * 指定 `Label` ，即通过 `-H "label:my_label"` 设置
 
     * 列更新写入
 
-    * 表不支持 light schema change
+    * 表不支持 `light schema change`
 
-* 对于 Unique 模型，由于 Group Commit 不能保证提交顺序，用户可以配合 Sequence 列使用来保证数据一致性
+* 对于 `Unique` 模型，由于 `Group Commit` 不能保证提交顺序，用户可以配合 `Sequence` 列使用来保证数据一致性
 
-* 对max_filter_ratio语义的支持
+* 对 `max_filter_ratio` 语义的支持
 
     * 在默认的导入中， `filter_ratio` 是导入完成后，通过失败的行数和总行数计算，决定是否提交本次写入
 
-    * 在 Group Commit 模式下，由于多个用户发起的导入会被一个内部导入执行，虽然可以计算出每个导入的 `filter_ratio` ，但是数据一旦进入内部导入，就只能 commit transaction
+    * 在 `Group Commit` 模式下，由于多个用户发起的导入会被一个内部导入执行，虽然可以计算出每个导入的 `filter_ratio` ，但是数据一旦进入内部导入，就只能 `commit transaction`
 
-    * Group Commit 模式支持了一定程度的 `max_filter_ratio` 语义，当导入的总行数不高于 `group_commit_memory_rows_for_max_filter_ratio` (配置在 `be.conf` 中，默认为 `10000` 行)， `max_filter_ratio` 工作
+    * `Group Commit` 模式支持了一定程度的 `max_filter_ratio` 语义，当导入的总行数不高于 `group_commit_memory_rows_for_max_filter_ratio` （配置在 `be.conf` 中，默认为 `10000` 行）， `max_filter_ratio` 工作
 
-* WAL 限制
+* `WAL` 限制
 
-    * 对于 `async_mode` 的 Group Commit 写入，会把数据写入 WAL。如果内部导入成功，则 WAL 被立刻删除；如果内部导入失败，通过导入 WAL 的方法来恢复数据
+    * 对于 `async_mode` 的 `Group Commit` 写入，会把数据写入 `WAL` 。如果内部导入成功，则 `WAL` 被立刻删除；如果内部导入失败，通过导入 `WAL` 的方法来恢复数据
 
-    * 目前 WAL 文件只存储在一个 BE 上，如果这个 BE 磁盘损坏或文件误删等，可能导入丢失部分数据
+    * 目前 `WAL` 文件只存储在一个 `BE` 上，如果这个 `BE` 磁盘损坏或文件误删等，可能导入丢失部分数据
 
-    * 当下线 BE 节点时，请使用 `DECOMMISSION` 命令，安全下线节点，防止该节点下线前 WAL 文件还没有全部处理完成，导致部分数据丢失
+    * 当下线 `BE` 节点时，请使用 `DECOMMISSION` 命令，安全下线节点，防止该节点下线前 `WAL` 文件还没有全部处理完成，导致部分数据丢失
 
-    * 对于 `async_mode` 的 Group Commit 写入，为了保护磁盘空间，当遇到以下情况时，会切换成 `sync_mode`
+    * 对于 `async_mode` 的 `Group Commit` 写入，为了保护磁盘空间，当遇到以下情况时，会切换成 `sync_mode`
 
-        * 导入数据量过大，即超过 WAL 单目录的 80% 空间
+        * 导入数据量过大，即超过 `WAL` 单目录的 `80%` 空间
 
-        * 不知道数据量的 chunked stream load
+        * 不知道数据量的 `chunked stream load`
 
         * 导入数据量不大，但磁盘可用空间不足
 
-    * 当发生重量级 Schema Change（目前加减列、修改 varchar 长度和重命名列是轻量级 Schema Change，其它的是重量级 Schema Change）时，为了保证 WAL 能够适配表的 Schema，在 Schema Change 最后的 FE 修改元数据阶段，会拒绝 Group Commit 写入，客户端收到 `insert table ${table_name} is blocked on schema change` 异常，客户端重试即可
+    * 当发生重量级 `Schema Change` （目前加减列、修改 `varchar` 长度和重命名列是轻量级 `Schema Change` ，其它的是重量级 `Schema Change` ）时，为了保证 `WAL` 能够适配表的 `Schema` ，在 `Schema Change` 最后的 `FE` 修改元数据阶段，会拒绝 `Group Commit` 写入，客户端收到 `insert table ${table_name} is blocked on schema change` 异常，客户端重试即可
 
 ## 5 相关系统配置
 
 ### 5.1 BE 配置
 
-group_commit_wal_path
+`group_commit_wal_path`
 
-* 描述：group commit 存放 WAL 文件的目录
+* 描述： `group commit` 存放 `WAL` 文件的目录
 
-* 默认值：默认在用户配置的storage_root_path的各个目录下创建一个名为wal的目录。配置示例：
+* 默认值：默认在用户配置的 `storage_root_path` 的各个目录下创建一个名为 `wal` 的目录。配置示例：
 
     ```shell
     group_commit_wal_path=/data1/storage/wal;/data2/storage/wal;/data3/storage/wal
     ```
 
-group_commit_memory_rows_for_max_filter_ratio
+`group_commit_memory_rows_for_max_filter_ratio`
 
-* 描述：当 group commit 导入的总行数不高于该值， `max_filter_ratio` 正常工作，否则不工作
+* 描述：当 `group commit` 导入的总行数不高于该值， `max_filter_ratio` 正常工作，否则不工作
 
-* 默认值：10000
+* 默认值： `10000`
 
 ## 6 性能
 
-我们分别测试了使用 `Stream Load` 和 `JDBC` 在高并发小数据量场景下 `group commit` (使用 `async mode` ) 的写入性能。
+我们分别测试了使用 `Stream Load` 和 `JDBC` 在高并发小数据量场景下 `group commit` （使用 `async mode` ）的写入性能。
 
 ### 6.1 Stream Load 日志场景测试
 
 * 机器配置
 
-    * 1 台 FE：阿里云 8 核 CPU、16GB 内存、1 块 100GB ESSD PL1 云磁盘
+    * `1` 台 `FE` ：阿里云 `8` 核 `CPU` 、 `16GB` 内存、 `1` 块 `100GB ESSD PL1` 云磁盘
 
-    * 3 台 BE：阿里云 16 核 CPU、64GB 内存、1 块 1TB ESSD PL1 云磁盘
+    * `3` 台 `BE` ：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `1TB ESSD PL1` 云磁盘
 
-    * 1 台测试客户端：阿里云 16 核 CPU、64GB 内存、1 块 100GB ESSD PL1 云磁盘
+    * `1` 台测试客户端：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `100GB ESSD PL1` 云磁盘
 
-    * 测试版本为Doris-3.0.1
+    * 测试版本为 `Doris-3.0.1`
 
 * 数据集
 
-    * `httplogs` 数据集，总共 31GB、2.47 亿条
+    * `httplogs` 数据集，总共 `31GB` 、 `2.47` 亿条
 
 * 测试工具
 
-    * doris-streamloader
+    * `doris-streamloader`
 
 * 测试方法
 
@@ -565,7 +565,7 @@ group_commit_memory_rows_for_max_filter_ratio
     | 非group_commit | 10 MB | 10 | 294 | 840,983 | 105.4 |
     | 非group_commit | 10 MB | 30 | 118 | 2,095,331 | 276.1 |
 
-在上面的 `group_commit` 测试中，BE 的 CPU 使用率在 10-40% 之间。
+在上面的 `group_commit` 测试中， `BE` 的 `CPU` 使用率在 `10-40%` 之间。
 
 可以看出， `group_commit` 模式在小数据量并发导入的场景下，能有效的提升导入性能，同时减少版本数，降低系统合并数据的压力。
 
@@ -573,23 +573,23 @@ group_commit_memory_rows_for_max_filter_ratio
 
 * 机器配置
 
-    * 1 台 FE：阿里云 8 核 CPU、16GB 内存、1 块 100GB ESSD PL1 云磁盘
+    * `1` 台 `FE` ：阿里云 `8` 核 `CPU` 、 `16GB` 内存、 `1` 块 `100GB ESSD PL1` 云磁盘
 
-    * 1 台 BE：阿里云 16 核 CPU、64GB 内存、1 块 500GB ESSD PL1 云磁盘
+    * `1` 台 `BE` ：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `500GB ESSD PL1` 云磁盘
 
-    * 1 台测试客户端：阿里云 16 核 CPU、64GB 内存、1 块 100GB ESSD PL1 云磁盘
+    * `1` 台测试客户端：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `100GB ESSD PL1` 云磁盘
 
-    * 测试版本为Doris-3.0.1
+    * 测试版本为 `Doris-3.0.1`
 
-    * 关闭打印parpared语句的audit log以提高性能
+    * 关闭打印 `parpared` 语句的 `audit log` 以提高性能
 
 * 数据集
 
-    * tpch sf10 lineitem 表数据集，30 个文件，总共约 22 GB，1.8 亿行
+    * `tpch sf10 lineitem` 表数据集， `30` 个文件，总共约 `22 GB` ， `1.8` 亿行
 
 * 测试工具
 
-    * DataX
+    * `DataX`
 
 * 测试方法
 
@@ -603,23 +603,23 @@ group_commit_memory_rows_for_max_filter_ratio
     | 100 | 20 | 210,476 | 22.19 |
     | 100 | 30 | 214,323 | 22.92 |
 
-在上面的测试中，FE 的 CPU 使用率在 60-70% 左右，BE 的 CPU 使用率在 10-20% 左右。
+在上面的测试中， `FE` 的 `CPU` 使用率在 `60-70%` 左右， `BE` 的 `CPU` 使用率在 `10-20%` 左右。
 
 ### 6.3 Insert into sync 模式小批量数据
 
 * 机器配置
 
-    * 1 台 FE：阿里云 16 核 CPU、64GB 内存、1 块 500GB ESSD PL1 云磁盘
+    * `1` 台 `FE` ：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `500GB ESSD PL1` 云磁盘
 
-    * 5 台 BE：阿里云 16 核 CPU、64GB 内存、1 块 1TB ESSD PL1 云磁盘。
+    * `5` 台 `BE` ：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `1TB ESSD PL1` 云磁盘。
 
-    * 1 台测试客户端：阿里云 16 核 CPU、64GB 内存、1 块 100GB ESSD PL1 云磁盘
+    * `1` 台测试客户端：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `100GB ESSD PL1` 云磁盘
 
-    * 测试版本为Doris-3.0.1
+    * 测试版本为 `Doris-3.0.1`
 
 * 数据集
 
-    * tpch sf10 `lineitem` 表数据集。
+    * `tpch sf10 lineitem` 表数据集。
 
     * 建表语句为
 
@@ -651,17 +651,17 @@ group_commit_memory_rows_for_max_filter_ratio
 
 * 测试工具
 
-    * Jmeter
+    * `Jmeter`
 
-        需要设置的jmeter参数如下图所示
+        需要设置的 `jmeter` 参数如下图所示
 
         ![](../../../../../../assets/images/Doris/jmeter1-baa8bee682b7778e4b90dcc7d1e66d96.jpg)
 
         ![](../../../../../../assets/images/Doris/jmeter2-9060becd8c6cb1bef900edad9bb306aa.jpg)
 
-        1. 设置测试前的init语句， `set group_commit=async_mode` 以及 `set enable_nereids_planner=false` 。
+        1. 设置测试前的 `init` 语句， `set group_commit=async_mode` 以及 `set enable_nereids_planner=false` 。
 
-        2. 开启jdbc的prepared statement，完整的url为 `jdbc:mysql://127.0.0.1:9030?useServerPrepStmts=true&useLocalSessionState=true&rewriteBatchedStatements=true&cachePrepStmts=true&prepStmtCacheSqlLimit=99999&prepStmtCacheSize=50&sessionVariables=group_commit=async_mode&sessionVariables=enable_nereids_planner=false` 。
+        2. 开启 `jdbc` 的 `prepared statement` ，完整的url为 `jdbc:mysql://127.0.0.1:9030?useServerPrepStmts=true&useLocalSessionState=true&rewriteBatchedStatements=true&cachePrepStmts=true&prepStmtCacheSqlLimit=99999&prepStmtCacheSize=50&sessionVariables=group_commit=async_mode&sessionVariables=enable_nereids_planner=false` 。
 
         3. 设置导入类型为 `prepared update statement` 。
 
@@ -671,29 +671,29 @@ group_commit_memory_rows_for_max_filter_ratio
 
 * 测试方法
 
-    * 通过 Jmeter 向Doris写数据。每个并发每次通过insert into写入1行数据。
+    * 通过 `Jmeter` 向 `Doris` 写数据。每个并发每次通过 `insert into` 写入 `1` 行数据。
 
 * 测试结果
 
     * 数据单位为行每秒。
 
-    * 以下测试分为30，100，500并发。
+    * 以下测试分为 `30` ， `100` ， `500` 并发。
 
-        30并发sync模式5个BE3副本性能测试
+        `30` 并发 `sync` 模式 `5` 个 `BE3` 副本性能测试
 
         | Group commit internal | 10ms | 20ms | 50ms | 100ms |
         | -- | -- | -- | -- | -- |
         | enable_nereids_planner=true | 891.8 | 701.1 | 400.0 | 237.5 |
         | enable_nereids_planner=false | 885.8 | 688.1 | 398.7 | 232.9 |
 
-        100并发sync模式5个BE3副本性能测试
+        `100` 并发 `sync` 模式 `5` 个 `BE3` 副本性能测试
 
         | Group commit internal | 10ms | 20ms | 50ms | 100ms |
         | -- | -- | -- | -- | -- |
         | enable_nereids_planner=true | 2427.8 | 2068.9 | 1259.4 | 764.9 |
         | enable_nereids_planner=false | 2320.4 | 1899.3 | 1206.2 | 749.7 |
 
-        500并发sync模式5个BE3副本性能测试
+        `500` 并发 `sync` 模式 `5` 个 `BE3` 副本性能测试
 
         | Group commit internal | 10ms | 20ms | 50ms | 100ms |
         | -- | -- | -- | -- | -- |
@@ -704,17 +704,17 @@ group_commit_memory_rows_for_max_filter_ratio
 
 * 机器配置
 
-    * 1 台 FE：阿里云 16 核 CPU、64GB 内存、1 块 500GB ESSD PL1 云磁盘
+    * `1` 台 `FE` ：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `500GB ESSD PL1` 云磁盘
 
-    * 5 台 BE：阿里云 16 核 CPU、64GB 内存、1 块 1TB ESSD PL1 云磁盘。注：测试中分别用了1台，3台，5台BE进行测试。
+    * `5` 台 `BE` ：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `1TB ESSD PL1` 云磁盘。注：测试中分别用了 `1` 台， `3` 台， `5` 台 `BE` 进行测试。
 
-    * 1 台测试客户端：阿里云 16 核 CPU、64GB 内存、1 块 100GB ESSD PL1 云磁盘
+    * `1` 台测试客户端：阿里云 `16` 核 `CPU` 、 `64GB` 内存、 `1` 块 `100GB ESSD PL1` 云磁盘
 
-    * 测试版本为Doris-3.0.1
+    * 测试版本为 `Doris-3.0.1`
 
 * 数据集
 
-    * tpch sf10 `lineitem` 表数据集。
+    * `tpch sf10 lineitem` 表数据集。
 
     * 建表语句为
 
@@ -746,33 +746,33 @@ group_commit_memory_rows_for_max_filter_ratio
 
 * 测试工具
 
-    * Jmeter
+    * `Jmeter`
 
 * 测试方法
 
-    * 通过 `Jmeter` 向 `Doris` 写数据。每个并发每次通过insert into写入1000行数据。
+    * 通过 `Jmeter` 向 `Doris` 写数据。每个并发每次通过 `insert into` 写入 `1000` 行数据。
 
 * 测试结果
 
     * 数据单位为行每秒。
 
-    * 以下测试分为30，100，500并发。
+    * 以下测试分为 `30` ， `100` ， `500` 并发。
 
-        30并发sync模式5个BE3副本性能测试
+        `30` 并发 `sync` 模式 `5` 个 `BE3` 副本性能测试
 
         | Group commit internal | 10ms | 20ms | 50ms | 100ms |
         | -- | -- | -- | -- | -- |
         | enable_nereids_planner=true | 9.1K | 11.1K | 11.4K | 11.1K |
         | enable_nereids_planner=false | 157.8K | 159.9K | 154.1K | 120.4K |
 
-        100并发sync模式5个BE3副本性能测试
+        `100` 并发 `sync` 模式 `5` 个 `BE3` 副本性能测试
 
         | Group commit internal | 10ms | 20ms | 50ms | 100ms |
         | -- | -- | -- | -- | -- |
         | enable_nereids_planner=true | 10.0K | 9.2K | 8.9K | 8.9K |
         | enable_nereids_planner=false | 130.4k | 131.0K | 130.4K | 124.1K |
 
-        500并发sync模式5个BE3副本性能测试
+        `500` 并发 `sync` 模式 `5` 个 `BE3` 副本性能测试
 
         | Group commit internal | 10ms | 20ms | 50ms | 100ms |
         | -- | -- | -- | -- | -- |
