--- a/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.4 错误数据处理.md
+++ b/docs/documents/Doris/Apache Doris 中文手册 v3.0/4 数据操作/4.1 数据导入/4.1.4 错误数据处理.md
@@ -2,9 +2,9 @@
 
 在导入过程中，原始列跟目标列的数据类型可能不完全一致，导入会对数据类型不一致的原始列值进行转换。转换过程中可能会发生字段类型不匹配、字段超长、精度不匹配等转换失败的情况。
 
-严格模式 (strict_mode) 用于控制导入过程中是否会对这些转换失败的错误数据行进行过滤。
+严格模式（ `strict_mode` ）用于控制导入过程中是否会对这些转换失败的错误数据行进行过滤。
 
-最大错误率 (max_filter_ratio) 用于控制能容忍的过滤掉的错误数据行所占的最大比例。
+最大错误率（ `max_filter_ratio` ）用于控制能容忍的过滤掉的错误数据行所占的最大比例。
 
 ## 1 严格模式
 
@@ -20,9 +20,9 @@
 
 * 正确的数据行和错误的数据行都有可能存在 `NULL` 值。如果目标列不允许 `NULL` 值，也会把这些包含 `NULL` 值的数据行过滤掉。
 
-对于导入的某列类型包含范围限制的，如果原始数据能正常通过类型转换，但无法通过范围限制的，严格模式对其也不产生影响。例如：如果类型是 `decimal(1,0)` , 原始数据为 10，则属于可以通过类型转换但不在列声明的范围内。这种数据严格模式对其不产生影响。
+对于导入的某列类型包含范围限制的，如果原始数据能正常通过类型转换，但无法通过范围限制的，严格模式对其也不产生影响。例如：如果类型是 `decimal(1,0)` ，原始数据为 `10` ，则属于可以通过类型转换但不在列声明的范围内。这种数据严格模式对其不产生影响。
 
-1. 以列类型为 TinyInt 来举例：
+1. 以列类型为 `TinyInt` 来举例：
 
     | 原始数据类型 | 原始数据举例 | 转换为 TinyInt 后的值 | 严格模式 | 结果 |
     | -- | -- | -- | -- | -- |
@@ -35,9 +35,9 @@
 
         1. 表中的列允许导入空值
 
-        2. `abc` 及 `2000` 在转换为 `TinyInt` 后，会因类型或精度问题变为 NULL。在严格模式开启的情况下，这类数据将会被过滤。而如果是关闭状态，则会导入 `null` 。
+        2. `abc` 及 `2000` 在转换为 `TinyInt` 后，会因类型或精度问题变为 `NULL` 。在严格模式开启的情况下，这类数据将会被过滤。而如果是关闭状态，则会导入 `null` 。
 
-2. 以列类型为 Decimal(1,0) 举例
+2. 以列类型为 `Decimal(1,0)` 举例
 
     | 原始数据类型 | 原始数据举例 | 转换为 Decimal 后的值 | 严格模式 | 结果 |
     | -- | -- | -- | -- | -- |
@@ -50,13 +50,13 @@
 
         1. 表中的列允许导入空值
 
-        2. `abc` 在转换为 `Decimal` 后，会因类型问题变为 NULL。在严格模式开启的情况下，这类数据将会被过滤。而如果是关闭状态，则会导入 `null` 。
+        2. `abc` 在转换为 `Decimal` 后，会因类型问题变为 `NULL` 。在严格模式开启的情况下，这类数据将会被过滤。而如果是关闭状态，则会导入 `null` 。
 
-        3. `10` 虽然是一个超过范围的值，但是因为其类型符合 decimal 的要求，所以严格模式对其不产生影响。 `10` 最后会在其他导入处理流程中被过滤。但不会被严格模式过滤。
+        3. `10` 虽然是一个超过范围的值，但是因为其类型符合 `decimal` 的要求，所以严格模式对其不产生影响。 `10` 最后会在其他导入处理流程中被过滤。但不会被严格模式过滤。
 
 ### 1.2 限定部分列更新只能更新已有的列
 
-在严格模式下，部分列更新插入的每一行数据必须满足该行数据的 Key 在表中已经存在。而在而非严格模式下，进行部分列更新时可以更新 Key 已经存在的行，也可以插入 Key 不存在的新行。
+在严格模式下，部分列更新插入的每一行数据必须满足该行数据的 `Key` 在表中已经存在。而在而非严格模式下，进行部分列更新时可以更新 `Key` 已经存在的行，也可以插入 `Key` 不存在的新行。
 
 例如有表结构如下：
 
@@ -80,7 +80,7 @@ mysql> desc user_profile;
 1,"kevin",18,"shenzhen",400,"2023-07-01 12:00:00"
 ```
 
-当用户使用非严格模式的 Stream Load 部分列更新向表中插入如下数据时
+当用户使用非严格模式的 `Stream Load` 部分列更新向表中插入如下数据时
 
 ```text
 1,500,2023-07-03 12:00:01
@@ -92,9 +92,9 @@ mysql> desc user_profile;
 curl  --location-trusted -u root -H "partial_columns:true" -H "strict_mode:false" -H "column_separator:," -H "columns:id,balance,last_access_time" -T /tmp/test.csv <http://host:port/api/db1/user_profile/_stream_load>
 ```
 
-表中原有的一条数据将会被更新，此外还向表中插入了两条新数据。对于插入的数据中用户没有指定的列，如果该列有默认值，则会以默认值填充；否则，如果该列可以为 NULL，则将以 NULL 值填充；否则本次插入不成功。
+表中原有的一条数据将会被更新，此外还向表中插入了两条新数据。对于插入的数据中用户没有指定的列，如果该列有默认值，则会以默认值填充；否则，如果该列可以为 `NULL` ，则将以 `NULL` 值填充；否则本次插入不成功。
 
-当用户使用严格模式的 Stream Load 部分列更新向表中插入上述数据时，由于开启了严格模式且第二、三行的数据的 `key((3), (18))` 不在原表中，所以本次导入会失败。
+当用户使用严格模式的 `Stream Load` 部分列更新向表中插入上述数据时，由于开启了严格模式且第二、三行的数据的 `key((3), (18))` 不在原表中，所以本次导入会失败。
 
 ```shell
 curl  --location-trusted -u root -H "partial_columns:true" -H "strict_mode:true" -H "column_separator:," -H "columns:id,balance,last_access_time" -T /tmp/test.csv <http://host:port/api/db1/user_profile/_stream_load>
@@ -102,9 +102,9 @@ curl  --location-trusted -u root -H "partial_columns:true" -H "strict_mode:true"
 
 ### 1.3 设置方法
 
-严格模式默认情况下都为 False，即关闭状态。 不同的导入方式设置严格模式的方式不尽相同。
+严格模式默认情况下都为 `False` ，即关闭状态。不同的导入方式设置严格模式的方式不尽相同。
 
-STREAM LOAD
+`STREAM LOAD`
 
 ```shell
 curl --location-trusted -u user:passwd \
@@ -113,7 +113,7 @@ curl --location-trusted -u user:passwd \
 <http://host:port/api/example_db/my_table/_stream_load>
 ```
 
-BROKER LOAD
+`BROKER LOAD`
 
 ```sql
 LOAD LABEL example_db.example_label_1
@@ -135,7 +135,7 @@ PROPERTIES
 );
 ```
 
-ROUTINE LOAD
+`ROUTINE LOAD`
 
 ```sql
 CREATE ROUTINE LOAD example_db.test_job ON my_table
@@ -150,7 +150,7 @@ FROM KAFKA
 );
 ```
 
-MySQL Load
+`MySQL Load`
 
 ```sql
 LOAD DATA LOCAL
@@ -162,7 +162,7 @@ PROPERTIES
 );
 ```
 
-INSERT INTO
+`INSERT INTO`
 
 ```sql
 SET enable_insert_strict = true;
@@ -171,17 +171,17 @@ INSERT INTO my_table ...;
 
 ## 2 最大错误率
 
-导入任务允许用户设置最大错误率 `max_filter_ratio` ，如果导入数据的错误率低于最大错误率，则这些错误行将被忽略，其他正确的数据将被导入, 否则该次导入就会失败。
+导入任务允许用户设置最大错误率 `max_filter_ratio` ，如果导入数据的错误率低于最大错误率，则这些错误行将被忽略，其他正确的数据将被导入，否则该次导入就会失败。
 
 ### 2.1 错误率计算方法
 
 导入作业中被处理的数据行可以分为如下三种：
 
-* Filtered Rows 因数据质量不合格而被过滤掉的数据。数据质量不合格包括类型错误、精度错误、字符串长度超长、文件列数不匹配等数据格式问题，以及因没有对应的分区而被过滤掉的数据行。
+* `Filtered Rows` 因数据质量不合格而被过滤掉的数据。数据质量不合格包括类型错误、精度错误、字符串长度超长、文件列数不匹配等数据格式问题，以及因没有对应的分区而被过滤掉的数据行。
 
-* Unselected Rows 这部分为因 前置过滤 或 后置过滤 条件而被过滤掉的数据行。
+* `Unselected Rows` 这部分为因前置过滤或后置过滤条件而被过滤掉的数据行。
 
-* Loaded Rows 被正确导入的数据行。
+* `Loaded Rows` 被正确导入的数据行。
 
 错误率的计算为：
 
@@ -193,9 +193,9 @@ INSERT INTO my_table ...;
 
 ### 2.2 设置方法
 
-`max_filter_ratio` 默认为 0, 表示当有一条错误数据时，整个导入任务将会失败。
+`max_filter_ratio` 默认为 `0` ，表示当有一条错误数据时，整个导入任务将会失败。
 
-Stream Load
+`Stream Load`
 
 ```shell
 curl --location-trusted -u user:passwd \
@@ -204,7 +204,7 @@ curl --location-trusted -u user:passwd \
 <http://host:port/api/example_db/my_table/_stream_load>
 ```
 
-Broker Load
+`Broker Load`
 
 ```sql
 LOAD LABEL example_db.example_label_1
@@ -226,7 +226,7 @@ PROPERTIES
 );
 ```
 
-Routine Load
+`Routine Load`
 
 ```sql
 CREATE ROUTINE LOAD example_db.test_job ON my_table
@@ -241,7 +241,7 @@ FROM KAFKA
 );
 ```
 
-MySQL Load
+`MySQL Load`
 
 ```sql
 LOAD DATA LOCAL
@@ -252,7 +252,7 @@ PROPERTIES (
  );
 ```
 
-INSERT INTO
+`INSERT INTO`
 
 ```sql
 SET insert_max_filter_ratio = 0.1;
@@ -261,4 +261,4 @@ INSERT INTO my_table FROM S3/HDFS/LOCAL();
 
 !!! tip
 
-    仅当 `enable_insert_strict` 值为 `false` 时， `insert_max_filter_ratio` 才生效，只用于控制 `INSERT INTO FROM S3/HDFS/LOCAL()` 的最大错误率。默认为 1.0，表示容忍所有错误。
+    仅当 `enable_insert_strict` 值为 `false` 时， `insert_max_filter_ratio` 才生效，只用于控制 `INSERT INTO FROM S3/HDFS/LOCAL()` 的最大错误率。默认为 `1.0` ，表示容忍所有错误。
